# Blues-Zencore

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Zencore/: compress.py  createPassword.py  fuzzer.py  scheduler.py  upload.py  utils.py
backup/: compress.py  fuzzer.py  state.py  utils.py
