[project]
name = "blues-zencore"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "cryptography>=44.0.3",
    "inquirerpy>=0.3.4",
    "pyfiglet>=1.0.2",
    "tqdm>=4.67.1",
    "zstandard>=0.23.0",
]
